@startuml

title __TILE's Class Diagram__\n

  namespace joc {
    namespace assets {
      namespace tile {
        class joc.assets.tile.Castle {
            {static} + CASTLE_GRASS : int
            {static} + CASTLE_SAND : int
            - health : int
            - willDropKey : boolean
            + Castle()
            + addOnDropKey()
            + destroy()
        }
      }
    }
  }
  

  namespace joc {
    namespace assets {
      namespace tile {
        class joc.assets.tile.Tile {
            # tileSprite : BufferedImage
            # x : int
            # y : int
            + Tile()
            + Tile()
            + addOnDropKey()
            + destroy()
            + draw()
            + drawAt()
            + getType()
            + setLocation()
        }
      }
    }
  }
  

  namespace joc {
    namespace assets {
      namespace tile {
        class joc.assets.tile.Tower {
            - health : int
            + Tower()
            + destroy()
        }
      }
    }
  }
  

  joc.assets.tile.Castle -up-|> joc.assets.tile.Tile
  joc.assets.tile.Castle o-- joc.player.Player : player
  joc.assets.tile.Tile o-- joc.assets.SpriteSheet : sheet
  joc.assets.tile.Tile o-- joc.assets.AssetList : type
  joc.assets.tile.Tower -up-|> joc.assets.tile.Tile


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
